--- a/frontend/login.html
+++ b/frontend/login.html
@@ -29,6 +29,7 @@
       margin: 0.5rem 0;
       border: 1px solid #ccc;
       border-radius: 0.5rem;
+      box-sizing: border-box;
     }
     .btn {
       background-color: #22c55e;
@@ -39,6 +40,7 @@
       cursor: pointer;
       width: 100%;
       margin-top: 1rem;
+      font-size: 1rem;
     }
     a {
       color: #22c55e;
@@ -55,10 +57,45 @@
     </div>
     <h2>Hoşgeldin!</h2>
     <p>Devam etmek için giriş yapın.</p>
-    <input type="email" placeholder="Email Address" />
-    <input type="password" placeholder="Password" />
-    <button class="btn">Giriş Yap</button>
+    <form id="loginForm">
+      <input type="email" name="email" placeholder="Email Address" required />
+      <input type="password" name="password" placeholder="Password" required />
+      <button type="submit" class="btn">Giriş Yap</button>
+    </form>
     <p style="margin-top: 1rem;">Hesabınız Yok mu? <a href="signup.html">Hesap Oluştur</a></p>
   </div>
+
+  <script>
+    const form = document.getElementById('loginForm');
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      const email = form.email.value.trim();
+      const password = form.password.value;
+
+      try {
+        const res = await fetch('/api/auth/login', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ email, password })
+        });
+
+        const data = await res.json();
+
+        if (res.ok) {
+          alert('Giriş başarılı! Ana sayfaya yönlendiriliyorsunuz.');
+          // Örnek: token'ı localStorage'a kaydetmek istersen
+          localStorage.setItem('token', data.token);
+          window.location.href = 'index.html'; // Anasayfa veya başka sayfa
+        } else {
+          alert('Hata: ' + data.message);
+        }
+      } catch (err) {
+        alert('Bir hata oluştu.');
+        console.error(err);
+      }
+    });
+  </script>
 </body>
 </html>
